# BiDiGrpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cmake
protos/: CMakeLists.txt  subscribe.proto
